k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgo
spec:
  selector:
    app: webgo
  ports:
  - port: 8080
    targetPort: 8080
