k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webgo-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - pegasus-staging-nlb-ingress-4864782668477233.elb.us-east-2.amazonaws.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webgo
spec:
  hosts:
  - pegasus-staging-nlb-ingress-4864782668477233.elb.us-east-2.amazonaws.com
  gateways:
  - webgo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: webgo.webgo.svc.cluster.local
        port:
          number: 8080
